MDEV-15352 AUTO_INCREMENT breaks after updating a column value to a negative number